// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownList: should render value with children 1`] = `
<div
  className="root"
>
  <div
    className="listItemValue"
    onClick={[Function]}
  >
    <Text
      baseline={false}
      className="chevronRight"
      raw={true}
      shouting={true}
    >
      testValue
    </Text>
    <ChevronIcon
      className="chevronFixHeight"
      direction="down"
    />
  </div>
  <div
    className="dropdownNoShow"
  >
    <span />
  </div>
</div>
`;

exports[`DropdownList: should render with className 1`] = `
<div
  className="root"
>
  <div
    className="listItemValue"
    onClick={[Function]}
  >
    <Text
      baseline={false}
      className="chevronRight"
      raw={true}
      shouting={true}
    >
      testValue
    </Text>
    <ChevronIcon
      className="chevronFixHeight"
      direction="down"
    />
  </div>
  <div
    className="dropdownNoShow"
  >
    <span />
  </div>
</div>
`;

exports[`DropdownList: should render without shadow 1`] = `
<div
  className="root noShadow"
>
  <div
    className="listItemValue"
    onClick={[Function]}
  >
    <Text
      baseline={false}
      className="chevronRight"
      raw={true}
      shouting={true}
    >
      testValue
    </Text>
    <ChevronIcon
      className="chevronFixHeight"
      direction="down"
    />
  </div>
  <div
    className="dropdownNoShow"
  >
    <span />
  </div>
</div>
`;
